--- a/templates/base.html
+++ b/templates/base.html
@@ -2,18 +2,13 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
+    <title>{% block title %} Сайт {% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     {% load static %}
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-
 <div class="container mt-4">
-    <nav class="navbar bg-body-tertiary">
-        <a class="navbar-brand">Home</a>
-
-
-    </nav>
     {% block content %}
 
     {% endblock %}
