--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     {% load static %}
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+{% include 'menu.html' %}
 <body>
 <div class="container mt-4">
     {% block content %}
