--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -33,7 +33,7 @@
     {% endif %}
 
     <p class="fw-bold">User: {{ comment.user }}</p>
-        <p>Label: {{ comment.text }}</p>
+        <p>Text: {{ comment.text }}</p>
 
     {% empty %}
     <p>No comments yet.</p>
