--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -20,14 +20,17 @@
         {% for task in tasks %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <div>
-                    <a href="{% url 'tasks:task-detail' task.pk %}" class="me-2">{{ task.title }}</a>
+                    <a href="{% url 'tasks:task-detail' task.pk %}" class="me-2 text-decoration-none stretched-link">{{ task.title }}</a>
                     <span class="badge bg-primary me-1">{{ task.status }}</span>
                     <span class="badge bg-secondary">{{ task.priority }}</span>
                 </div>
-                <form action="{% url 'tasks:task-complete' task.pk %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-warning btn-sm">Позначити як виконано</button>
-                </form>
+                {% if task.status != 'done' %}
+                    <form action="{% url 'tasks:task-complete' task.pk %}" method="post">
+                        {% csrf_token %}
+
+                        <button type="submit" class="btn btn-success btn-sm"><i class="bi bi-check"></i></button>
+                    </form>
+                {% endif %}
             </li>
         {% empty %}
             <li class="list-group-item">Завдання не знайдено.</li>
