--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -12,7 +12,7 @@
             {{ form.status }}
         </div>
         <div class="col-auto">
-            <button type="submit" class="btn btn-primary">Фільтрувати</button>
+            <button type="submit" class="btn btn-primary"><i class="bi bi-search"></i></button>
         </div>
     </form>
 
@@ -31,9 +31,32 @@
                         <button type="submit" class="btn btn-success btn-sm"><i class="bi bi-check"></i></button>
                     </form>
                 {% endif %}
+
+
+
             </li>
         {% empty %}
             <li class="list-group-item">Завдання не знайдено.</li>
+        {% endfor %}
+        <hr>
+        <h2>Призначенні завдання</h2>
+        {% for task in request.user.assigned_tasks.all %}
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <div>
+                    <a href="{% url 'tasks:task-detail' task.pk %}" class="me-2 text-decoration-none stretched-link">{{ task.title }}</a>
+                    <span class="badge bg-primary me-1">{{ task.status }}</span>
+                    <span class="badge bg-secondary">{{ task.priority }}</span>
+                </div>
+                {% if task.status != 'done' %}
+                    <form action="{% url 'tasks:task-complete' task.pk %}" method="post">
+                        {% csrf_token %}
+
+                        <button type="submit" class="btn btn-success btn-sm"><i class="bi bi-check"></i></button>
+                    </form>
+                {% endif %}
+            </li>
+        {% empty %}
+            <li class="list-group-item">Призначених завданнь нема.</li>
         {% endfor %}
     </ul>
 </div>
