--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -11,8 +11,8 @@
     <p>Статус: <span class="badge text-bg-primary">{{ task.status }}</span></p>
     <p>Пріоритет: <span class="badge text-bg-secondary">{{ task.priority }}</span></p>
 
-    <a href="{% url 'tasks:task-update' task.id %}" class="btn btn-warning">Редагувати</a>
-    <a href="{% url 'tasks:task-delete' task.id %}" class="btn btn-danger">Видалити</a>
+    <a href="{% url 'tasks:task-update' task.id %}" class="btn btn-outline-warning"><i class="bi bi-pencil-square"></i></a>
+    <a href="{% url 'tasks:task-delete' task.id %}" class="btn btn-outline-danger"><i class="bi bi-trash-fill"></i></a>
 
 
     <hr>
@@ -21,9 +21,9 @@
     {% if comment.media %}
     <div class="comment-media">
         {% if comment.media.url|endswith:".jpg" or comment.media.url|endswith:".png" or comment.media.url|endswith:".jpeg" %}
-          <img src="{{ comment.media.url }}" alt="Зображення коментаря" style="max-width: 1000px;">
+          <img src="{{ comment.media.url }}" alt="Зображення коментаря" style="max-width: 100px;">
         {% elif comment.media.url|endswith:".mp4" %}
-          <video width="320" height="240" controls>
+          <video width="220" height="140" controls>
             <source src="{{ comment.media.url }}" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -32,9 +32,10 @@
         {% endif %}
     </div>
     {% endif %}
-
+    <p>Text: {{ comment.text }}</p>
     <p class="fw-bold">User: {{ comment.user }}</p>
-        <p>Text: {{ comment.text }}</p>
+    <hr>
+
 
     {% empty %}
     <p>No comments yet.</p>
@@ -46,7 +47,7 @@
     <form action="{% url 'tasks:task-detail' task.id %}" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {{ comment_form.as_p }}
-      <button type="submit" class="btn btn-primary">Відправити</button>
+      <button type="submit" class="btn btn-outline-primary"><i class="bi bi-send"></i></button>
     </form>
 
 </div>
