--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container mt-3">
     <h2>Мої завдання</h2>
-    <a href="{% url 'tasks:task-create' %}" class="btn btn-primary mb-3">Додати завдання</a>
+    <a href="{% url 'tasks:task-create' %}" class="btn btn-outline-primary mb-3">Додати завдання</a>
 
     <form method="get" class="row g-3 align-items-center mb-3">
         <div class="col-auto">
@@ -12,15 +12,15 @@
             {{ form.status }}
         </div>
         <div class="col-auto">
-            <button type="submit" class="btn btn-primary"><i class="bi bi-search"></i></button>
+            <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search"></i></button>
         </div>
     </form>
 
     <ul class="list-group">
         {% for task in tasks %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <div>
-                    <a href="{% url 'tasks:task-detail' task.pk %}" class="me-2 text-decoration-none stretched-link">{{ task.title }}</a>
+                <div class="position-relative">
+                    <a href="{% url 'tasks:task-detail' task.pk %}" class="me-2 text-decoration-none ">{{ task.title }}</a>
                     <span class="badge bg-primary me-1">{{ task.status }}</span>
                     <span class="badge bg-secondary">{{ task.priority }}</span>
                 </div>
@@ -28,7 +28,7 @@
                     <form action="{% url 'tasks:task-complete' task.pk %}" method="post">
                         {% csrf_token %}
 
-                        <button type="submit" class="btn btn-success btn-sm"><i class="bi bi-check"></i></button>
+                        <button type="submit" class="btn btn-outline-success btn-sm"><i class="bi bi-check"></i></button>
                     </form>
                 {% endif %}
 
@@ -42,8 +42,8 @@
         <h2>Призначенні завдання</h2>
         {% for task in request.user.assigned_tasks.all %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <div>
-                    <a href="{% url 'tasks:task-detail' task.pk %}" class="me-2 text-decoration-none stretched-link">{{ task.title }}</a>
+                <div class="position-relative">
+                    <a href="{% url 'tasks:task-detail' task.pk %}" class="me-2 text-decoration-none ">{{ task.title }}</a>
                     <span class="badge bg-primary me-1">{{ task.status }}</span>
                     <span class="badge bg-secondary">{{ task.priority }}</span>
                 </div>
@@ -51,7 +51,7 @@
                     <form action="{% url 'tasks:task-complete' task.pk %}" method="post">
                         {% csrf_token %}
 
-                        <button type="submit" class="btn btn-success btn-sm"><i class="bi bi-check"></i></button>
+                        <button type="submit" class="btn btn-outline-success btn-sm"><i class="bi bi-check"></i></button>
                     </form>
                 {% endif %}
             </li>
