add delete vote

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,7 +4,7 @@
         <a class="navbar-brand" href="/">
             {% load static %}
 
-            <img src="{% static 'img/logo.png'%}" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">My_Task</a>
+            <img src="{% static 'img/logo2.png'%}" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">My_Task</a>
 
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
