--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -16,7 +16,7 @@
         </div>
     </form>
 
-    <ul class="list-group">
+    <ul class="list-group my-3">
         {% for task in tasks %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <div class="position-relative">
@@ -38,8 +38,9 @@
         {% empty %}
             <li class="list-group-item">Завдання не знайдено.</li>
         {% endfor %}
-        <hr>
-        <h2>Призначенні завдання</h2>
+        <ul class="list-group my-2">
+        <h3>Призначенні завдання:</h3>
+        <ul class="list-group my-2">
         {% for task in request.user.assigned_tasks.all %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <div class="position-relative">
@@ -58,6 +59,7 @@
         {% empty %}
             <li class="list-group-item">Призначених завданнь нема.</li>
         {% endfor %}
+        </ul>
     </ul>
 </div>
 {% endblock %}
